testdata/baselines/reference/submodule/compiler/unusedTypeParametersWithUnderscore.errors.txt
unusedTypeParametersWithUnderscore.ts(1,16): error TS6196: 'U' is declared but never used.
unusedTypeParametersWithUnderscore.ts(3,12): error TS6196: 'U' is declared but never used.
unusedTypeParametersWithUnderscore.ts(5,17): error TS6196: 'U' is declared but never used.
unusedTypeParametersWithUnderscore.ts(7,13): error TS6196: 'U' is declared but never used.
unusedTypeParametersWithUnderscore.ts(8,18): error TS6196: 'W' is declared but never used.
unusedTypeParametersWithUnderscore.ts(11,14): error TS6196: 'U' is declared but never used.


==== unusedTypeParametersWithUnderscore.ts (6 errors) ====
    function f<_T, U>() { }
                   ~
!!! error TS6196: 'U' is declared but never used.
    
    type T<_T, U> = { };
               ~
!!! error TS6196: 'U' is declared but never used.
    
    interface I<_T, U> { };
                    ~
!!! error TS6196: 'U' is declared but never used.
    
    class C<_T, U> {
                ~
!!! error TS6196: 'U' is declared but never used.
        public m<_V, W>() { }
                     ~
!!! error TS6196: 'W' is declared but never used.
    };
    
    let l = <_T, U>() => { };
                 ~
!!! error TS6196: 'U' is declared but never used.
    